Messages-deki delete-i sildim

--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Show/Index.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Show/Index.cshtml
@@ -9,6 +9,10 @@
             border-color: black;
             color: #fff;
         }
+        .delete-icon {
+            color: #F0636A;
+            font-size: 1.3em;
+        }
     </style>
 
     <div  id="editable-sample_wrapper" class="panel-body" role="grid">
@@ -33,18 +37,16 @@
                 {
                     @foreach (var item in Model)
                     {
-                <tr class="odd">
-                    <td class="sorting_1">@item.Name</td>
-                    <td class=" ">@item.Email</td>
-                    <td class=" ">@item.Subject</td>
-                    <td class=" ">@item.Content</td>
-                    <td class=" ">@item.SendDate</td>
-                    <td class="edit-delete">
-                        <i class="fa fa-trash" aria-hidden="true">
-                            <a class="delete delete-about" asp-area="ConstructionAdmin" asp-controller="Show" asp-action="Delete" asp-route-id="@item.id">Delete</a>
-                            </i>
-                    </td>
-                </tr>
+                        <tr class="odd">
+                            <td class="sorting_1">@item.Name</td>
+                            <td class=" ">@item.Email</td>
+                            <td class=" ">@item.Subject</td>
+                            <td class=" ">@item.Content</td>
+                            <td class=" ">@item.SendDate</td>
+                            <td class="edit-delete">
+                                <a class="delete delete-about" asp-area="ConstructionAdmin" asp-controller="Show" asp-action="Delete" asp-route-id="@item.id"><i class="fa fa-trash delete-icon" aria-hidden="true"></i></a>
+                            </td>
+                        </tr>
                     }
                 }
                 else
