AccountController ucun SignIn getdiyi yeri duzeltdim

--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Account/Login.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Account/Login.cshtml
@@ -14,7 +14,7 @@
     <meta name="keyword" content="FlatLab, Dashboard, Bootstrap, Admin, Template, Theme, Responsive, Fluid, Retina">
     <link rel="shortcut icon" href="~/ConstructionAdminimg/favicon.png">
 
-    <title>Construction - Admin</title>
+    <title>PDC.az - Login for Admin</title>
 
     <!-- Bootstrap core CSS -->
     <link href="~/ConstructionAdmin/css/bootstrap.min.css" rel="stylesheet">
