Areas-da Account/Index-de renglerde deyishiklik etdim

--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Account/Index.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Account/Index.cshtml
@@ -31,7 +31,7 @@
             </aside>
             <aside class="profile-info col-lg-9 user-bio">
                 <section class="panel">
-                    <div class="bio-graph-heading">
+                    <div class="bio-graph-heading" style="background-color: rgb(49, 49, 49); opacity: .8;">
                         <h1>Bio Graph</h1>
                     </div>
                     
