--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Shared/Components/UserProfile/Default.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Shared/Components/UserProfile/Default.cshtml
@@ -1,12 +1,9 @@
 ﻿@model UserDTO
-<div class="user-heading round">
-    <a href="#">
-        <img src="~/ConstructionAdmin/img/profile-avatar.jpg" alt="">
-    </a>
+<div class="user-heading round" style="background-color: #ffc925">
     <h1>@Model.Name</h1>
     <p>@Model.Email</p>
 </div>
 <ul class="nav nav-pills nav-stacked">
-    <li class="active"><a asp-area="ConstructionAdmin" asp-controller="Account" asp-action="Index"> <i class="icon-user"></i> Profile</a></li>
+    <li class="active"><a asp-area="ConstructionAdmin" asp-controller="Account" asp-action="Index" style="border-left: #ffc925"> <i class="icon-user"></i> Profile</a></li>
     <li><a asp-area="ConstructionAdmin" asp-controller="Account" asp-action="Create"> <i class="icon-pencil"></i> Create New Admin</a></li>
 </ul>
