--- a/ConstructionSite/Views/Shared/_LinkPartialStyle.cshtml
+++ b/ConstructionSite/Views/Shared/_LinkPartialStyle.cshtml
@@ -1,6 +1,6 @@
 ﻿<link rel="stylesheet" type="text/css" href="~/style.css">
-<link href="~/customer/css/myContent.css" rel="stylesheet" />
-<link href="~/customer/css/Layout.css" rel="stylesheet" />
+<link href="~/customer/css/myContent.css" rel="stylesheet" type="text/css"/>
+<link href="~/customer/css/Layout.css" rel="stylesheet" type="text/css"/>
 <!-- Favicon and touch icons  -->
 <link rel="shortcut icon" href="~/assets/img/logo-light.png">
 <link rel="apple-touch-icon-precomposed" href="~/assets/icon/apple-touch-icon-158-precomposed.png" />
