--- a/ConstructionSite/Views/Shared/_Layout.cshtml
+++ b/ConstructionSite/Views/Shared/_Layout.cshtml
@@ -47,16 +47,7 @@
             </footer>
 
             <!-- Bottom -->
-            <div id="bottom" class="clearfix style-1">
-                <div id="bottom-bar-inner" class="wprt-container">
-                    <div class="bottom-bar-inner-wrap">
-                        <div class="bottom-bar-menu">
-                            <partial name="_FooterMenuPartial" />
-                        </div>
-                        <!-- /.bottom-bar-menu -->
-                    </div>
-                </div>
-            </div>
+            <partial name="_BottonPartial"/>
         </div>
         <!-- /#page -->
     </div>
