Added_Javascrip_File

--- a/ConstructionSite/Views/Message/Index.cshtml
+++ b/ConstructionSite/Views/Message/Index.cshtml
@@ -77,3 +77,10 @@
         </div>
     </div>
 </div>
+@section scrips{
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
+    <script let keys="AIzaSyD2QmvoLHHVFktvA_fyDKKLoRjZJzpEKqg" ;
+            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD2QmvoLHHVFktvA_fyDKKLoRjZJzpEKqg&callback=initMap&libraries=&v=weekly"
+            defer></script>
+<script src="~/customer/js/_mapMarker.js"></script>
+}
