--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Contact/Update.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Contact/Update.cshtml
@@ -76,6 +76,16 @@
                                     <input type="email" asp-for="Email" id="f-name" class="form-control" placeholder="Email">
                                 </div>
                             </div>
+                            <div class="form-group">
+                                <div class="col-lg-11">
+                                    <input type="email" asp-for="lat" id="f-name" class="form-control" placeholder="Latitude ">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <div class="col-lg-11">
+                                    <input type="email" asp-for="lng" id="f-name" class="form-control" placeholder="Longitude ">
+                                </div>
+                            </div>
                             <div class="form-group" style="margin-left: 72%;">
                                 <div class="col-lg-offset-2 col-lg-11">
                                     <button class="btn btn-success about-button" type="submit">Save</button>
