--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Contact/Update.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Contact/Update.cshtml
@@ -78,12 +78,12 @@
                             </div>
                             <div class="form-group">
                                 <div class="col-lg-11">
-                                    <input type="email" asp-for="lat" id="f-name" class="form-control" placeholder="Latitude ">
+                                    <input type="text" asp-for="lat" id="f-name" class="form-control" placeholder="Latitude ">
                                 </div>
                             </div>
                             <div class="form-group">
                                 <div class="col-lg-11">
-                                    <input type="email" asp-for="lng" id="f-name" class="form-control" placeholder="Longitude ">
+                                    <input type="text" asp-for="lng" id="f-name" class="form-control" placeholder="Longitude ">
                                 </div>
                             </div>
                             <div class="form-group" style="margin-left: 72%;">
