--- a/ConstructionSite/Views/_ViewImports.cshtml
+++ b/ConstructionSite/Views/_ViewImports.cshtml
@@ -2,6 +2,7 @@
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper ConstructionSite.TagHelpers.*,ConstructionSite
 @using ConstructionSite.DTO.FrontViewModels.About
+@using ConstructionSite.DTO.FrontViewModels.Maps
 @using ConstructionSite.DTO.FrontViewModels.Portfoli
 @using ConstructionSite.DTO.FrontViewModels.Contact
 @using ConstructionSite.DTO.FrontViewModels.Service
