--- a/ConstructionSite/Views/Shared/_Layout.cshtml
+++ b/ConstructionSite/Views/Shared/_Layout.cshtml
@@ -45,12 +45,12 @@
             <div id="site-header-wrap">
                 <!-- Header -->
                 <header id="site-header" class="header-front-page style-5">
-                    <div id="site-header-inner" class="container">
+                    <div id="site-header-inner" class="container" style="padding-bottom: 12px;">
                         <div class="wrap-inner">
                             <div id="site-logo" class="clearfix">
                                 <div id="site-logo-inner">
                                     <a asp-controller="Home" asp-action="Index" title="Construction" rel="home" class="main-logo">
-                                        <img src="~/assets/img/logo-light.png" alt="Construction"  data-width="204" data-height="30" style=" position: absolute; width: 110px; height: 68px; top: -8px;  background-color: white;">
+                                        <img src="~/assets/img/logo-light.png" alt="Construction"  data-width="204" data-height="30" style=" position: absolute; width: 110px; height: 68px; top: 0px;  background-color: white;">
                                     </a>
                                 </div>
                             </div>
