--- a/ConstructionSite/Views/Shared/_Layout.cshtml
+++ b/ConstructionSite/Views/Shared/_Layout.cshtml
@@ -80,6 +80,7 @@
 
     <!-- Revolution Slider -->
     <partial name="_RevolutionPartialScripts" />
+    <partial name="_LoadingPartialScripts"/>
     <script type="text/javascript" src="~/customer/js/Component.js"
             asp-append-version="true">
     </script>
