Top buttonunu icona deyishdim

--- a/ConstructionSite/Views/Shared/_MainnavPartial.cshtml
+++ b/ConstructionSite/Views/Shared/_MainnavPartial.cshtml
@@ -17,7 +17,7 @@
 }
 <nav id="main-nav" class="main-nav">
     <ul class="menu">
-        <li class="current-menu-item"><a asp-controller="Home" asp-action="Index">@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.Home)</a></li>
+        <li class="current-menu-item active"><a asp-controller="Home" asp-action="Index">@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.Home)</a></li>
         <li><a asp-controller="About" asp-action="Index">@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.About)</a></li>
         <li class="menu-item menu-item-has-children">
             <a href="/Services/Index">@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.Services)</a>
