--- a/ConstructionSite/Views/Shared/_Layout.cshtml
+++ b/ConstructionSite/Views/Shared/_Layout.cshtml
@@ -11,16 +11,17 @@
 
     <meta name="description" descriptions />
     <meta name="keywords" metapage />
-    <meta name="author" content="PDC.az"/>
+    <meta name="author" content="PDC.az" />
     <!-- Mobile Specific Metas -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 
     <!-- Theme Style -->
 
     <partial name="_LinkPartialStyle" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     @await RenderSectionAsync("head", false)
 
-   
+
 </head>
 
 <body class="front-page   no-sidebar site-layout-full-width menu-has-cart header-sticky header-style-5">
@@ -82,7 +83,7 @@
     </div>
     <!-- /#wrapper -->
 
-    <a id="scroll-top">@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.Top)</a>
+    <a id="scroll-top"><i class="fa fa-arrow-up" style="font-size: 1.9em; margin-top: 22%;"></i></a>
 
     <!-- Javascript -->
     <partial name="_JavascriptPartial" />
