--- a/ConstructionSite/Views/Shared/_MainnavPartial.cshtml
+++ b/ConstructionSite/Views/Shared/_MainnavPartial.cshtml
@@ -9,14 +9,15 @@
                                     .ToList();
 }
 @section head{
-<style>
-    .langdata{
-        padding:10px;
-    }
-</style>
+    <style>
+        .langdata {
+            padding: 10px;
+        }
+    </style>
 }
 <nav id="main-nav" class="main-nav">
     <ul class="menu">
+        
         <li><a asp-controller="Home" asp-action="Index">@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.Home)</a></li>
         <li><a asp-controller="About" asp-action="Index">@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.About)</a></li>
         <li>
@@ -30,10 +31,23 @@
 
         @foreach (var item in cultureItems)
         {
-            <li><a class="datas_item langdata" data-id="@item.Name">
-            <input class="contexts" type="hidden"  data-id="@Context.Request.Path" />@item.NativeName.Substring(0, 2).ToUpper()</a></li>
+        <li>
+            <a class="datas_item langdata" data-id="@item.Name">
+                <input class="contexts" type="hidden" data-id="@Context.Request.Path" />@item.NativeName.Substring(0, 2).ToUpper()
+            </a>
+        </li>
         }
     </ul>
 </nav>
-<script src="~/ConstructionAdmin/js/jquery-1.8.3.min.js"></script>
-<script src="~/customer/js/Language.js"></script>
+@section Scrips{
+    <script src="~/ConstructionAdmin/js/jquery-1.8.3.min.js"></script>
+    <script src="~/customer/js/Language.js"></script>
+    <script type="text/javascript">
+        jQuery(document).ready(function ($) {
+            // Get current url
+            // Select an a element that has the matching href and apply a class of 'active'. Also prepend a - to the content of the link
+            var url = window.location.href;
+            $('.menu a[href="' + url + '"]').addClass('current_page_item');
+        });
+    </script>
+}
