--- a/ConstructionSite/Views/_ViewImports.cshtml
+++ b/ConstructionSite/Views/_ViewImports.cshtml
@@ -1,6 +1,7 @@
 ﻿@using ConstructionSite
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper ConstructionSite.TagHelpers.*,ConstructionSite
+@using ConstructionSite.Cores.HelperTag
 @using ConstructionSite.DTO.FrontViewModels.About
 @using ConstructionSite.DTO.FrontViewModels.Maps
 @using ConstructionSite.DTO.FrontViewModels.Portfoli
