--- a/ConstructionSite/Views/Portfolio/Index.cshtml
+++ b/ConstructionSite/Views/Portfolio/Index.cshtml
@@ -24,11 +24,11 @@
     <div class="wprt-project" data-layout="grid" data-column="4" data-column2="3" data-column3="2" data-column4="1" data-gaph="0" data-gapv="0">
         <div id="project-filter">
             <div data-filter="*" class="cbp-filter-item">
-                <span class="All">@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.All)</span>
+                <span id="All" class="All">@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.All)</span>
             </div>
             @foreach (var item in Model)
             {
-                <div class="cbp-filter-item mains" data-id="@item.Id">
+                <div id="mins" class="cbp-filter-item mains" data-id="@item.Id">
                     <span>@item.Name</span>
                 </div>
             }
@@ -47,8 +47,7 @@
             var id = 0;
             $("#grid-container").load(`/Portfolio/Project/${id}`);
             $(".All").click(function () {
-
-                $("#grid-container").load(`/Portfolio/Project/${id}`);
+               $("#grid-container").load(`/Portfolio/Project/${id}`);
             });
             $(".mains").click(function () {
                 id = $(this).data("id");
