Logonu qaydaya saldim

--- a/ConstructionSite/Views/Shared/_Layout.cshtml
+++ b/ConstructionSite/Views/Shared/_Layout.cshtml
@@ -31,7 +31,7 @@
             <div id="site-header-wrap">
                 <!-- Header -->
                 <header id="site-header" class="header-front-page style-5">
-                    <div id="site-header-inner" class="container" style="padding-top: 12px;">
+                    <div id="site-header-inner" class="container" style="padding-top: 1%; padding-bottom: 2%;">
                         <div class="wrap-inner">
                             <div id="site-logo" class="clearfix">
                                 <div id="site-logo-inner">
