--- a/ConstructionSite/Views/Portfolio/Index.cshtml
+++ b/ConstructionSite/Views/Portfolio/Index.cshtml
@@ -23,13 +23,13 @@
 
     <div class="wprt-project" data-layout="grid" data-column="4" data-column2="3" data-column3="2" data-column4="1" data-gaph="0" data-gapv="0">
         <div id="project-filter">
-            <div data-filter="*" class="cbp-filter-item">
+            <div id="myfist" data-filter="*" class="cbp-filter-item" >
                 <span id="All" class="All">@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.All)</span>
             </div>
             @foreach (var item in Model)
             {
-                <div id="mins" class="cbp-filter-item mains" data-id="@item.Id">
-                    <span>@item.Name</span>
+                <div data-filter=".@item.Name" class="cbp-filter-item mains" data-id="@item.Id">
+                    <span class="" data-id="@item.Id">@item.Name</span>
                 </div>
             }
         </div>
@@ -46,11 +46,18 @@
         $(document).ready(function () {
             var id = 0;
             $("#grid-container").load(`/Portfolio/Project/${id}`);
+            $("#myfist").removeClass("cbp-filter-item");
+            $("#myfist").addClass("cbp-filter-item cbp-filter-item-active");
             $(".All").click(function () {
+                $("#myfist").removeClass("cbp-filter-item");
+                $("#myfist").addClass("cbp-filter-item cbp-filter-item-active");
                $("#grid-container").load(`/Portfolio/Project/${id}`);
             });
             $(".mains").click(function () {
                 id = $(this).data("id");
+                $("#myfist").removeClass("cbp-filter-item cbp-filter-item-active");
+                $("#myfist").addClass("cbp-filter-item");
+               
                 $("#grid-container").load(`/Portfolio/Project/${id}`);
             });
 
