--- a/ConstructionSite/Views/Shared/_MessagePartial.cshtml
+++ b/ConstructionSite/Views/Shared/_MessagePartial.cshtml
@@ -4,16 +4,16 @@
         <div class="inner">
             <div class="left-side">
                 <div class="input-wrap">
-                    <input tabindex="1" placeholder="Name " asp-for="Name" id="name" required />
+                    <input tabindex="1" placeholder="Name " name="Name" id="name" required />
                 </div>
                 <div class="input-wrap">
-                    <input tabindex="2" placeholder="Email " asp-for="Email" id="email" required />
+                    <input tabindex="2" placeholder="Email " name="Email" id="email" required />
                 </div>
                 <div class="input-wrap">
-                    <input type="text" tabindex="4" placeholder="Subject " asp-for="Subject" id="subject" required />
+                    <input type="text" tabindex="4" placeholder="Subject " name="Subject" id="subject" required />
                 </div>
                 <div class="message-wrap">
-                    <textarea tabindex="5" placeholder="Message " asp-for="UserMessage" id="message" required></textarea>
+                    <textarea tabindex="5" placeholder="Message " name="UserMessage" id="message" required></textarea>
                 </div>
                 <div class="send-wrap">
                     <input type="submit" value="SEND MESSAGE" id="submit" name="submit" class="submit">
