--- a/ConstructionSite/Views/Shared/_MessagePartial.cshtml
+++ b/ConstructionSite/Views/Shared/_MessagePartial.cshtml
@@ -1,19 +1,19 @@
-﻿@model MessageAddViewModel
+﻿
 <div class="col-md-8">
     <form class="wprt-contact-form" method="post" asp-controller="Message" asp-action="Message">
         <div class="inner">
             <div class="left-side">
                 <div class="input-wrap">
-                    <input tabindex="1" placeholder="Name " name="Name" id="name" required />
+                    <input type="text" value="" tabindex="1" placeholder="Name *" name="name" id="Name" required>
                 </div>
                 <div class="input-wrap">
-                    <input tabindex="2" placeholder="Email " name="Email" id="email" required />
+                    <input type="email" value="" tabindex="2" placeholder="Email *" name="Email" id="email" required>
                 </div>
                 <div class="input-wrap">
-                    <input type="text" tabindex="4" placeholder="Subject " name="Subject" id="subject" required />
+                    <input type="text" value="" tabindex="4" placeholder="Subject *" name="Subject" id="subject" required>
                 </div>
                 <div class="message-wrap">
-                    <textarea tabindex="5" placeholder="Message " name="UserMessage" id="message" required></textarea>
+                    <textarea class="" tabindex="5" placeholder="Message *" name="message" id="Message" required></textarea>
                 </div>
                 <div class="send-wrap">
                     <input type="submit" value="SEND MESSAGE" id="submit" name="submit" class="submit">
