--- a/ConstructionSite/Views/Home/Index.cshtml
+++ b/ConstructionSite/Views/Home/Index.cshtml
@@ -164,7 +164,7 @@
         <section id="contact" class="wprt-section">
             <div class="container">
                 <div class="row">
-                    @await Component.InvokeAsync("Messages")
+                    @await Component.InvokeAsync("Message")
                 </div>
                 <!-- /.row -->
             </div>
