--- a/ConstructionSite/Views/Message/Index.cshtml
+++ b/ConstructionSite/Views/Message/Index.cshtml
@@ -42,13 +42,15 @@
                                 <div class="col-md-4">
                                     @await Component.InvokeAsync("Contact")
                                 </div>
-                                <partial name="_MessagePartial" />
-
-                                <div class="col-md-12">
-                                    <div class="wprt-spacer" data-desktop="100" data-mobi="60" data-smobi="60" style="height:100px"></div>
+                                <div class="col-md-8">
+                                    @await Component.InvokeAsync("Messages")
                                 </div>
-                            </div>
-                        </div>
+                                   
+                                        <div class="col-md-12">
+                                            <div class="wprt-spacer" data-desktop="100" data-mobi="60" data-smobi="60" style="height:100px"></div>
+                                        </div>
+                                    </div>
+                                </div>
                     </section>
                 </div>
             </div>
