--- a/ConstructionSite/Views/Shared/Components/Message/Default.cshtml
+++ b/ConstructionSite/Views/Shared/Components/Message/Default.cshtml
@@ -1,53 +1,39 @@
-﻿@model ContactIndexViewModel
+﻿@model MessageAddViewModel
 @inject SharedLocalizationService Localizer
-@{
-    ViewData["Title"] = "Index";
-}
-<!-- Featured Title -->
-<div id="featured-title" class="clearfix featured-title-left">
-    <div id="featured-title-inner" class="container clearfix">
-        <div class="featured-title-inner-wrap">
-            <div class="featured-title-heading-wrap">
-                <h1 class="featured-title-heading">@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.ContactUs)</h1>
-            </div>
-        </div>
-    </div>
-</div>
 
-<!-- Main Content -->
 <div id="main-content" class="site-main clearfix">
     <div id="content-wrap">
         <div id="site-content" class="site-content clearfix">
             <div id="inner-content" class="inner-content-wrap">
                 <div class="page-content">
                     <section class="wprt-section">
-                        <div id="gmap" class="wprt-map-1"></div>
-                        <div class="wprt-spacer" data-desktop="100" data-mobi="60" data-smobi="60"></div>
+                        <div class="wprt-spacer" data-desktop="100" data-mobi="60" data-smobi="60" style="height:100px"></div>
                         <div class="container">
                             <div class="row">
                                 <div class="col-md-12">
-                                    <h2 class="text-center margin-bottom-20">@Model.Tittle</h2>
+                                    <h2 class="text-center margin-bottom-20">@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.ContactUs)</h2>
                                     <div class="wprt-lines style-2 custom-1">
                                         <div class="line-1"></div>
                                     </div>
-                                    <div class="wprt-spacer" data-desktop="36" data-mobi="30" data-smobi="30"></div>
-                                    <p class="wprt-subtitle">@Model.Content</p>
-                                    <div class="wprt-spacer" data-desktop="40" data-mobi="30" data-smobi="30"></div>
+
+                                    <div class="wprt-spacer" data-desktop="36" data-mobi="30" data-smobi="30" style="height:36px"></div>
+
+                                    <p class="wprt-subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sit amet iaculis elit. Nam semper ut arcu non placerat. Praesent nibh massa varius.</p>
+                                    <div class="wprt-spacer" data-desktop="40" data-mobi="30" data-smobi="30" style="height:40px"></div>
                                 </div>
                                 <!-- /.col-md-12 -->
-
                                 <div class="col-md-4">
                                     @await Component.InvokeAsync("Contact")
                                 </div>
-                                <!-- /.col-md-4 -->
 
                                 <div class="col-md-8">
                                     @await Component.InvokeAsync("Messages")
+                                    <!-- /.wprt-contact-form -->
                                 </div>
                                 <!-- /.col-md-8 -->
 
                                 <div class="col-md-12">
-                                    <div class="wprt-spacer" data-desktop="100" data-mobi="60" data-smobi="60"></div>
+                                    <div class="wprt-spacer" data-desktop="100" data-mobi="60" data-smobi="60" style="height:100px"></div>
                                 </div>
                                 <!-- /.col-md-12 -->
                             </div>
