--- a/ConstructionSite/Views/Shared/Components/Messages/Default.cshtml
+++ b/ConstructionSite/Views/Shared/Components/Messages/Default.cshtml
@@ -1,72 +1,21 @@
-﻿@model MessageAddViewModel
-@inject SharedLocalizationService Localizer
-
-<div id="main-content" class="site-main clearfix">
-    <div id="content-wrap">
-        <div id="site-content" class="site-content clearfix">
-            <div id="inner-content" class="inner-content-wrap">
-                <div class="page-content">
-                    <section class="wprt-section">
-                        <div class="wprt-spacer" data-desktop="100" data-mobi="60" data-smobi="60" style="height:100px"></div>
-                        <div class="container">
-                            <div class="row">
-                                <div class="col-md-12">
-                                    <h2 class="text-center margin-bottom-20">@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.ContactUs)</h2>
-                                    <div class="wprt-lines style-2 custom-1">
-                                        <div class="line-1"></div>
-                                    </div>
-
-                                    <div class="wprt-spacer" data-desktop="36" data-mobi="30" data-smobi="30" style="height:36px"></div>
-
-                                    <p class="wprt-subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sit amet iaculis elit. Nam semper ut arcu non placerat. Praesent nibh massa varius.</p>
-                                    <div class="wprt-spacer" data-desktop="40" data-mobi="30" data-smobi="30" style="height:40px"></div>
-                                </div>
-                                <!-- /.col-md-12 -->
-                                <div class="col-md-4">
-                                    @await Component.InvokeAsync("Contact")
-                                </div>
-
-                                <div class="col-md-8">
-                                    <form class="wprt-contact-form" asp-controller="Message"
-                                          asp-action="Add"
-                                          novalidate="novalidate">
-                                        <div class="inner">
-                                            <div class="left-side">
-                                                <div class="input-wrap">
-                                                    <input type="text" value="" tabindex="1" placeholder="Name *" asp-for="Name" id="name" required="">
-                                                </div>
-                                                <div class="input-wrap">
-                                                    <input type="email" value="" tabindex="2" placeholder="Email *" asp-for="Email" id="email" required="">
-                                                </div>
-                                                <div class="input-wrap">
-                                                    <input type="text" value="" tabindex="4" placeholder="Subject *" asp-for="Subject" id="subject" required="">
-                                                </div>
-                                                <div class="message-wrap">
-                                                    <textarea class="" tabindex="5" placeholder="Message *" asp-for="UserMessage" id="message" required=""></textarea>
-                                                </div>
-                                                <div class="send-wrap">
-                                                    <input type="submit" value="SEND MESSAGE" id="submit" name="submit" class="submit">
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </form>
-                                    <!-- /.wprt-contact-form -->
-                                </div>
-                                <!-- /.col-md-8 -->
-
-                                <div class="col-md-12">
-                                    <div class="wprt-spacer" data-desktop="100" data-mobi="60" data-smobi="60" style="height:100px"></div>
-                                </div>
-                                <!-- /.col-md-12 -->
-                            </div>
-                            <!-- /.row -->
-                        </div>
-                        <!-- /.container -->
-                    </section>
-
-                    <!-- PARTNERS -->
-                </div>
+﻿<form class="wprt-contact-form" method="post" asp-controller="Message" asp-action="Add">
+    <div class="inner">
+        <div class="left-side">
+            <div class="input-wrap">
+                <input type="text" value="" tabindex="1" placeholder="Name *" name="Name" id="name" required>
+            </div>
+            <div class="input-wrap">
+                <input type="email" value="" tabindex="2" placeholder="Email *" name="Email" id="email" required>
+            </div>
+            <div class="input-wrap">
+                <input type="text" value="" tabindex="4" placeholder="Subject *" name="subject" id="subject" required>
+            </div>
+            <div class="message-wrap">
+                <textarea class="" tabindex="5" placeholder="Message *" name="UserMessage" id="message" required></textarea>
+            </div>
+            <div class="send-wrap">
+                <input type="submit" value="SEND MESSAGE" id="submit" name="submit" class="submit">
             </div>
         </div>
     </div>
-</div>
+</form>
