--- a/ConstructionSite/Views/Portfolio/Index.cshtml
+++ b/ConstructionSite/Views/Portfolio/Index.cshtml
@@ -28,7 +28,7 @@
             </div>
             @foreach (var item in Model)
             {
-                <div data-filter=".@item.Name" class="cbp-filter-item mains" data-id="@item.Id">
+                <div  class="cbp-filter-item  mains" data-name="@item.Name" data-id="@item.Id">
                     <span class="" data-id="@item.Id">@item.Name</span>
                 </div>
             }
@@ -46,8 +46,8 @@
         $(document).ready(function () {
             var id = 0;
             $("#grid-container").load(`/Portfolio/Project/${id}`);
-            $("#myfist").removeClass("cbp-filter-item");
-            $("#myfist").addClass("cbp-filter-item cbp-filter-item-active");
+            $("#myfist").removeClass("cbp-filter-item  ");
+            $("#myfist").addClass("cbp-filter-item   cbp-filter-item-active");
             $(".All").click(function () {
                 $("#myfist").removeClass("cbp-filter-item");
                 $("#myfist").addClass("cbp-filter-item cbp-filter-item-active");
@@ -55,9 +55,11 @@
             });
             $(".mains").click(function () {
                 id = $(this).data("id");
+                    
                 $("#myfist").removeClass("cbp-filter-item cbp-filter-item-active");
                 $("#myfist").addClass("cbp-filter-item");
-
+               
+            
                 $("#grid-container").load(`/Portfolio/Project/${id}`);
             });
 
