--- a/ConstructionSite/Views/Portfolio/Index.cshtml
+++ b/ConstructionSite/Views/Portfolio/Index.cshtml
@@ -41,7 +41,7 @@
 
 @section scrips{
 
-    <script>
+    <script asp-append-version="true">
 
         $(document).ready(function () {
             var id = 0;
