--- a/ConstructionSite/Views/Shared/Components/Portfolio/Default.cshtml
+++ b/ConstructionSite/Views/Shared/Components/Portfolio/Default.cshtml
@@ -22,12 +22,12 @@
     <div class="wprt-project" data-layout="grid" data-column="4" data-column2="3" data-column3="2" data-column4="1" data-gaph="0" data-gapv="0">
         <div id="project-filter">
             <div id="myfist" class="cbp-filter-item">
-                <span class="All">@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.All)</span>
+                <span id="All" class="All">@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.All)</span>
             </div>
             @foreach (var item in Model)
             {
-                <div class="cbp-filter-item mains" data-name="@item.Name" data-id="@item.Id">
-                    <span>@item.Name</span>
+                <div class="cbp-filter-item  mains" data-name="@item.Name" data-id="@item.Id">
+                    <span class="" data-id="@item.Id">@item.Name</span>
                 </div>
             }
         </div>
@@ -53,9 +53,7 @@
             });
             $(".mains").click(function () {
                 id = $(this).data("id");
-                var item = $(this).data("name");
-                item.removeClass("cbp-filter-item mains");
-                item.addClass("cbp-filter-item  mains cbp-filter-item-active");
+               
                 $("#myfist").removeClass("cbp-filter-item cbp-filter-item-active");
                 $("#myfist").addClass("cbp-filter-item");
 
