--- a/ConstructionSite/Views/Shared/_MessagePartial.cshtml
+++ b/ConstructionSite/Views/Shared/_MessagePartial.cshtml
@@ -1,5 +1,4 @@
-﻿
-<form class="wprt-contact-form" method="post" asp-controller="Message" asp-action="Add">
+﻿<form class="wprt-contact-form" method="post" asp-controller="Message" asp-action="Add">
     <div class="inner">
         <div class="left-side">
             <div class="input-wrap">
