--- a/ConstructionSite/Views/Shared/_Layout.cshtml
+++ b/ConstructionSite/Views/Shared/_Layout.cshtml
@@ -81,7 +81,7 @@
     <partial name="_LoadingPartialScripts" />
     <script type="text/javascript" src="~/customer/js/Component.js" asp-append-version="true">
     </script>
-    <script type="text/javascript" src="~/customer/js/Language.js"></script>
+    <script type="text/javascript" src="~/customer/js/Language.js" asp-append-version="true"></script>
 
     @RenderSection("Scrips", required: false)
 </body>
