--- a/ConstructionSite/Views/Shared/Components/Portfolio/Default.cshtml
+++ b/ConstructionSite/Views/Shared/Components/Portfolio/Default.cshtml
@@ -21,8 +21,8 @@
 
     <div class="wprt-project" data-layout="grid" data-column="4" data-column2="3" data-column3="2" data-column4="1" data-gaph="0" data-gapv="0">
         <div id="project-filter">
-            <div id="myfist" class="cbp-filter-item">
-                <span id="All" class="All">@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.All)</span>
+            <div id="myfist" class="cbp-filter-item All">
+                <span >@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.All)</span>
             </div>
             @foreach (var item in Model)
             {
