--- a/ConstructionSite/Views/Shared/_HeaderPartial.cshtml
+++ b/ConstructionSite/Views/Shared/_HeaderPartial.cshtml
@@ -1,10 +1,17 @@
-﻿<header id="site-header" class="header-front-page style-5">
+﻿@section head{
+<style >
+    .site-header-inner{
+        padding-top:3%;
+    }
+</style>
+}
+<header id="site-header" class="header-front-page style-5">
     <div id="site-header-inner" class="container">
         <div class="wrap-inner">
             <div id="site-logo" class="clearfix">
                 <div id="site-logo-inner">
                     <a asp-controller="Home" asp-action="Index" title="Construction" rel="home" class="main-logo">
-                        <img src="~/assets/img/logo-light.png" alt="Construction" data-width="204" data-height="30" style=" position: absolute; width: 110px; height: 42px; top: -8px;  background-color: white;">
+                        <img class="logo_image" src="~/assets/img/logo-light.png" alt="Construction" data-width="204" data-height="30" style=" position: absolute; width:110px;height:42px; top: -8px;  background-color: white;">
                     </a>
                 </div>
             </div>
