--- a/ConstructionSite/wwwroot/style.css
+++ b/ConstructionSite/wwwroot/style.css
@@ -24,6 +24,7 @@
 @import "includes/rev-slider/css/navigation.css";
 @import "assets/css/woocommerce.css";
 @import "assets/css/shortcodes.css";
+@import "assets/css/custom.css";
 /**
  * Reset Browsers
  * General
