--- a/ConstructionSite/Views/Portfolio/Project.cshtml
+++ b/ConstructionSite/Views/Portfolio/Project.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IEnumerable<ProjectViewModel>
 
-<div class="contianer">
+<div class="container-fluid">
         <div class="row">
             @foreach (var item in Model)
             {
