--- a/ConstructionSite/wwwroot/customer/css/icon.css
+++ b/ConstructionSite/wwwroot/customer/css/icon.css
@@ -1,7 +1,5 @@
 ﻿.logo_image {
-    position: absolute;
-    width: 110px;
-    height: 42px;
-    top: -8px;
-    background-color: white;
+    height: auto;
+    max-width: 100%;
+    vertical-align: middle
 }
