--- a/ConstructionSite/Views/Shared/_Layout.cshtml
+++ b/ConstructionSite/Views/Shared/_Layout.cshtml
@@ -1,5 +1,4 @@
 ﻿@inject SharedLocalizationService Localizer
-
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-US" lang="en-US">
 
@@ -20,7 +19,7 @@
     <partial name="_LinkPartialStyle" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     @RenderSection("head", false)
-<link href="~/customer/css/icon.css" rel="stylesheet" />
+@*<link href="~/customer/css/icon.css" rel="stylesheet" />*@
 </head>
 
 <body class="front-page   no-sidebar site-layout-full-width menu-has-cart header-sticky header-style-5">
@@ -30,14 +29,15 @@
             <div id="site-header-wrap">
                 <!-- Header -->
                 <header id="site-header" class="header-front-page style-5">
-                    <div id="site-header-inner" class="container" style="padding-top: 1%; padding-bottom: 2%;">
+                    <div id="site-header-inner" class="container" style="padding: 18px 15px;">
                         <div class="wrap-inner">
-                            <div id="site-logo" class="clearfix">
+                            <div id="site-logo" class="clearfix" style="width: 50%;display: inline-block;">
                                 <div id="site-logo-inner">
-                                    <a asp-controller="Home" asp-action="Index" title="Construction" rel="home" class="main-logo">
-                                        <img src="~/assets/img/logo-light.png" alt="Construction" data-width="204" data-height="30" style=" position: absolute; width: 110px; height: 40.73px; top: 0px;  background-color: white;">
-                                    </a>
-                                </div>
+            <a asp-controller="Home" asp-action="Index" title="Construction" rel="home" class="main-logo">
+                <img src="~/assets/img/logo-light.png" alt="Construction" data-width="204" data-height="30" style="width: 94px; height: 54px; top: 0px;  background-color: white;">
+            </a>
+        </div>
+                                
                             </div>
                             <!-- /#site-logo -->
 
