--- a/ConstructionSite/Views/Portfolio/Detail.cshtml
+++ b/ConstructionSite/Views/Portfolio/Detail.cshtml
@@ -1,12 +1,12 @@
 ﻿@inject SharedLocalizationService Localizer
 @model ProjectViewDetailsModel
 @section head{
-    <style>
+    @*<style>
         .porimage {
             width: 770px;
             height: 513px;
         }
-    </style>
+    </style>*@
 }
 
 <div id="featured-title" class="clearfix featured-title-left">
