--- a/ConstructionSite/Views/Shared/_Layout.cshtml
+++ b/ConstructionSite/Views/Shared/_Layout.cshtml
@@ -19,7 +19,9 @@
     <partial name="_LinkPartialStyle" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     @RenderSection("head", false)
-@*<link href="~/customer/css/icon.css" rel="stylesheet" />*@
+    <link rel="stylesheet"
+          href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css" />
+    @*<link href="~/customer/css/icon.css" rel="stylesheet" />*@
 </head>
 
 <body class="front-page   no-sidebar site-layout-full-width menu-has-cart header-sticky header-style-5">
